objects/CS_ConvertSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>AttachmentEndDate__c</fullName>
        <label>Attachment End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AttachmentStatus__c</fullName>
        <label>Attachment Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConvertAttachments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Convert Attachments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ConvertNotes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Convert Notes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastAttachmentParentID__c</fullName>
        <label>LastAttachmentParentID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastNotesParentID__c</fullName>
        <label>LastNotesParentID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NotesEndDate__c</fullName>
        <label>Notes End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NotesStatus__c</fullName>
        <label>Notes Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prefix__c</fullName>
        <label>Prefix</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Att_Job__c</fullName>
        <label>Previous_Att_Job</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Note_Job__c</fullName>
        <label>Previous_Note_Job</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalAttachmentProcessed__c</fullName>
        <label>Total Attachment Processed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalNotesProcessed__c</fullName>
        <label>TotalNotesProcessed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Convert Notes &amp; Attachments Settings</label>
</CustomObject>